--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,7 @@ strong {
 
 #preview-content blockquote {
   padding-left: 6px;
-  border-left: 4px solid skyblue;
-  opacity: 0.75;
+  border-left: 4px solid #777777;
 }
 
 #preview-content table{
