--- a/css/style.css
+++ b/css/style.css
@@ -12,22 +12,27 @@ body * {
 
 h1 {
   font-size: 2em;
+  line-height: 2.5em;
 }
 
 h2 {
   font-size: 1.8em;
+  line-height: 2.2em;
 }
 
 h3 {
   font-size: 1.6em;
+  line-height: 1.8em;
 }
 
 h4 {
   font-size: 1.4em;
+  line-height: 1.5em;
 }
 
 h5 {
   font-size: 1.2em;
+  line-height: 1.2em;
 }
 
 button,
@@ -37,6 +42,10 @@ p {
 
 #editor {
   width: 50%;
+}
+
+li {
+  margin-bottom: 0.5em;
 }
 
 #editor-textarea,
