--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Sawarabi+Mincho");
 
-body {
-  font-family: "Sawarabi Mincho", sans-serif;
+body,
+#editor * {
+  font-family: "Sawarabi Mincho", "Sawarabi Gothic", "Helvetica Neue", Helvetica,
+    Arial, sans-serif;
 }
