Convert JS to TS and split IndexedDB

--- a/src/style/base.css
+++ b/src/style/base.css
@@ -3,6 +3,5 @@
 
 body,
 #editor * {
-  font-family: "Sawarabi Mincho", "Sawarabi Gothic", "Helvetica Neue", Helvetica,
-    Arial, sans-serif;
+  font-family: "Sawarabi Mincho", "Sawarabi Gothic", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
